--- a/MevetProject/rental_ads/templates/kino.html
+++ b/MevetProject/rental_ads/templates/kino.html
@@ -14,7 +14,7 @@
         <a href="{% url 'rental_detail' category_name=rental.category.name rental_id=rental.id %}">
             <img src="{{ rental.main_image.url }}">
             <h3>{{ rental.name }}</h3>
-            <p>Description of Product 4</p>
+            <p> rental.description </p>
             <p>{{ rental.address }}</p>
             <button class="add-to-favorites">Add to Favorites</button>
         </a>
